Fix key table action options
Modify action button in the key table so that the expanding action
options move with the action column.

Also modify css to allow the expanded actions options of the last key
in the table to go outside of the table boundary.

Previously, if the browser window was smaller than the table width,
requiring horizontal scrolling, when hovering the cursor over the action
button the expanded action options were off screen.

--- a/saplings/profile/src/components/KeyTable.scss
+++ b/saplings/profile/src/components/KeyTable.scss
@@ -62,6 +62,7 @@
   .table-wrapper {
     border-radius: 5px 5px 3px 3px;
     overflow-x: scroll;
+    height: 705px;
   }
 
   table {
@@ -86,7 +87,7 @@
       font-weight: bold;
       font-size: 12px;
       color: #545454;
-      padding: 2%;
+      padding: 0% 2%;
       background: #E4E4E4E4;
       text-align: left;
     }
@@ -133,6 +134,7 @@
       .button-wrapper {
         button#action-button{
           background: rgba(216, 216, 216, 0.5);
+          position: relative;
           display: flex;
           justify-content: center;
           border: none;
@@ -146,6 +148,7 @@
           .action-options {
             width: 0;
             height: 0;
+            z-index: 1;
             overflow: hidden;
             color: var(--color-primary);
             background: #EBEBEB;
