--- a/saplings/profile/src/components/KeyTableNav.scss
+++ b/saplings/profile/src/components/KeyTableNav.scss
@@ -78,3 +78,7 @@
     }
   }
 }
+
+.bottom {
+  position: absolute;
+}
